<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/MyLayout"
    tools:context="com.pub.assignment.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_cardBalance"
            style="@style/MyTextView"
            android:text="@string/enter_card_balance" />

        <EditText
            android:id="@+id/edittext_mainActivity_cardBalance"
            style="@style/MyEditText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_yearIntrest"
            style="@style/MyTextView"
            android:text="@string/enter_yearly_intrest_rate" />

        <EditText
            android:id="@+id/edittext_mainActivity_yearIntrest"
            style="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_minimumPayment"
            style="@style/MyTextView"
            android:text="@string/enter_minimum_payment" />

        <EditText
            android:id="@+id/edittext_mainActivity_minimumPayment"
            style="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_finalCardBal"
            style="@style/MyTextView"
            android:text="@string/final_card_balance" />

        <EditText
            android:id="@+id/edittext_mainActivity_finalCardBal"
            style="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_monthsRemainig"
            style="@style/MyTextView"
            android:text="@string/months_remaining" />

        <EditText
            android:id="@+id/edittext_mainActivity_monthsRemainig"
            style="@style/MyEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_mainActivity_interstPaid"
            style="@style/MyTextView"
            android:text="@string/intrest_paid_will_be" />

        <EditText
            android:id="@+id/edittext_mainActivity_interstPaid"
            style="@style/MyEditText" />
    </LinearLayout>

    <Button
        android:id="@+id/button_mainActivity_compute"
        style="@style/MyButton"
        android:text="@string/compute" />

    <Button
        android:id="@+id/button_mainActivity_clear"
        style="@style/MyButton"
        android:layout_marginTop="15dp"
        android:text="@string/clear" />

</LinearLayout>
